--- a/index.html
+++ b/index.html
@@ -26,24 +26,11 @@
     <div class="card mt-2" style="width: 30rem">
       <div class="card-body">
         <div class="mb-3">
-          <input
-            type="text"
-            class="form-control"
-            id = "nombre"
-            placeholder="Nombre completo del alumno"
-            aria-label="Recipient's username"
-            aria-describedby="basic-addon2"         
-          />
+          <input type="text" class="form-control" id = "nombre" placeholder="Nombre completo del alumno" aria-label="Recipient's username" aria-describedby="basic-addon2"/>
           
         </div>
         <div class="input-group mb-3">
-          <input
-            type="text"
-            id="materias"
-            class="form-control"
-            placeholder="Ingrese la cantidad de materias"
-            
-          />
+          <input type="text" id="materias" class="form-control" placeholder="Ingrese la cantidad de materias"/>
           <div class="input-group-append">
             <button class="btn btn-success" id="boton" type="submit">Cargar</button>
           </div>
