--- a/ejercicio2.html
+++ b/ejercicio2.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <div class="card mt-2" style="width: 30rem">
+    <div class="card m-2" style="width: 30rem">
         <div class="card-body">
             <div class="mb-3">
                 <input type="text" class="form-control" id="numero1" placeholder="Ingrese el número 1" />
