Codificando la lógica del diagrama de flujo

--- a/ejercicio2.html
+++ b/ejercicio2.html
@@ -31,7 +31,9 @@
             <div class="mb-3">
                 <input type="text" class="form-control" id="numero4" placeholder="Ingrese el número 4" />
             </div>
-
+            <div class="mb-3">
+                <h3 id="respuesta">...</h3>
+            </div>
             <div class="input-group-append">
                 <button class="btn btn-success" id="boton" type="submit">Verificar</button>
             </div>
@@ -40,7 +42,7 @@
         </div>
     </div>
 
-    <script src="numeros.js"></script>
+    <script src="numero.js"></script>
 </body>
 
 </html>
