--- a/ejercicio2.html
+++ b/ejercicio2.html
@@ -20,16 +20,16 @@
     <div class="card m-2" style="width: 30rem">
         <div class="card-body">
             <div class="mb-3">
-                <input type="text" class="form-control" id="numero1" placeholder="Ingrese el número 1" />
+                <input type="number" class="form-control" id="numero1" placeholder="Ingrese el número 1" />
             </div>
             <div class="mb-3">
-                <input type="text" class="form-control" id="numero2" placeholder="Ingrese el número 2" />
+                <input type="number" class="form-control" id="numero2" placeholder="Ingrese el número 2" />
             </div>
             <div class="mb-3">
-                <input type="text" class="form-control" id="numero3" placeholder="Ingrese el número 3" />
+                <input type="number" class="form-control" id="numero3" placeholder="Ingrese el número 3" />
             </div>
             <div class="mb-3">
-                <input type="text" class="form-control" id="numero4" placeholder="Ingrese el número 4" />
+                <input type="number" class="form-control" id="numero4" placeholder="Ingrese el número 4" />
             </div>
             <div class="mb-3">
                 <h3 id="respuesta">...</h3>
