--- a/ejercicio2.html
+++ b/ejercicio2.html
@@ -18,6 +18,9 @@
 
 <body>
     <div class="card m-2" style="width: 30rem">
+        <div class="card-header">
+            <h2>Ejercicio #2</h2>
+        </div>
         <div class="card-body">
             <div class="mb-3">
                 <input type="number" class="form-control" id="numero1" placeholder="Ingrese el número 1" />
