--- a/ejercicio2.html
+++ b/ejercicio2.html
@@ -16,32 +16,32 @@
     <title>Tarea Pensamiento Algorítmico - Ejercicio #2</title>
 </head>
 
-<body>
-    <div class="card m-2" style="width: 30rem">
-        <div class="card-header">
-            <h2>Ejercicio #2</h2>
-        </div>
-        <div class="card-body">
-            <div class="mb-3">
-                <input type="number" class="form-control" id="numero1" placeholder="Ingrese el número 1" />
+<body class="bg-primary">
+    <div class="row justify-content-center">
+        <div class="card m-2" style="width: 30rem">
+            <div class="card-header">
+                <h2>Ejercicio #2</h2>
             </div>
-            <div class="mb-3">
-                <input type="number" class="form-control" id="numero2" placeholder="Ingrese el número 2" />
+            <div class="card-body">
+                <div class="mb-3">
+                    <input type="number" class="form-control" id="numero1" placeholder="Ingrese el número 1" />
+                </div>
+                <div class="mb-3">
+                    <input type="number" class="form-control" id="numero2" placeholder="Ingrese el número 2" />
+                </div>
+                <div class="mb-3">
+                    <input type="number" class="form-control" id="numero3" placeholder="Ingrese el número 3" />
+                </div>
+                <div class="mb-3">
+                    <input type="number" class="form-control" id="numero4" placeholder="Ingrese el número 4" />
+                </div>
+                <div class="mb-3">
+                    <h3 id="respuesta">...</h3>
+                </div>
+                <div class="input-group-append">
+                    <button class="btn btn-success" id="boton" type="submit">Verificar</button>
+                </div>
             </div>
-            <div class="mb-3">
-                <input type="number" class="form-control" id="numero3" placeholder="Ingrese el número 3" />
-            </div>
-            <div class="mb-3">
-                <input type="number" class="form-control" id="numero4" placeholder="Ingrese el número 4" />
-            </div>
-            <div class="mb-3">
-                <h3 id="respuesta">...</h3>
-            </div>
-            <div class="input-group-append">
-                <button class="btn btn-success" id="boton" type="submit">Verificar</button>
-            </div>
-
-
         </div>
     </div>
 
