--- a/index.html
+++ b/index.html
@@ -20,10 +20,15 @@
       integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
       crossorigin="anonymous"
     ></script>
-    <title>Tarea Pensamiento Algorítmico</title>
+    <title>Tarea Pensamiento Algorítmico - Ejercicio # 1</title>
   </head>
-  <body>
+  <body class="bg-primary">
+
+    <div class="row justify-content-center">
     <div class="card mt-2" style="width: 30rem">
+      <div class="card-header">
+        <h3>Ejercicio #1</h3>
+      </div>
       <div class="card-body">
         <div class="mb-3">
           <input type="text" class="form-control" id = "nombre" placeholder="Nombre completo del alumno" aria-label="Recipient's username" aria-describedby="basic-addon2"/>
@@ -40,7 +45,7 @@
         </div>
       </div>
     </div>
-
+  </div>
     <script src="materias.js"></script>
   </body>
 </html>
