--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         <div>
           <ul id="ulvalores"></ul>
         </div>
+        <h3 id="respuesta">...</h3>
       </div>
     </div>
   </div>
