Ajustando el contador de errores

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           
         </div>
         <div class="input-group mb-3">
-          <input type="text" id="materias" class="form-control" placeholder="Ingrese la cantidad de materias"/>
+          <input type="number" id="materias" class="form-control" placeholder="Ingrese la cantidad de materias"/>
           <div class="input-group-append">
             <button class="btn btn-success" id="boton" type="submit">Cargar</button>
           </div>
@@ -43,7 +43,7 @@
         <div>
           <ul id="ulvalores"></ul>
         </div>
-        <h3 id="respuesta">...</h3>
+        <h5 id="respuesta">...</h5>
       </div>
     </div>
   </div>
