--- a/ejercicio2.html
+++ b/ejercicio2.html
@@ -17,10 +17,12 @@
 </head>
 
 <body class="bg-primary">
+
     <div class="row justify-content-center">
         <div class="card m-2" style="width: 30rem">
             <div class="card-header">
                 <h2>Ejercicio #2</h2>
+                <a href="index.html" class="link-primary float-end">Ejercicio #1</a>
             </div>
             <div class="card-body">
                 <div class="mb-3">
