--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <div class="card mt-2" style="width: 50rem">
       <div class="card-header">
         <h3>Ejercicio #1</h3>
+        <a href="ejercicio2.html" class="link-primary float-end">Ejercicio #2</a>
       </div>
       <div class="card-body">
         <div class="mb-3">
